# optical_neural_network

./: MANIFEST.in.md  README.md  create_gds_nxn.py  extract_params.py  nxn_optical_switch_layout.ipynb  optim_hperparam.py  pyproject.toml  requirements.txt  setup.py  train_cancer_model.py  train_mnist_model.py
examples/: optim_hperparam.py  train_mnist_model.py
onn/: __init__.py
onn/layer/: __init__.py  adaptive_optical_layer.py  optical_activation_layer.py  optical_layer.py  segmented_optical_layer.py
onn/layout/: __init__.py
onn/model/: __init__.py  optical_cancer.py  optical_mnist.py  utils.py
onn/optics/: __init__.py  fock_state_simulation.py  gvm.py  interferometer.py  nee_simulation.py  nonlinear_envelope_equation.py  output_fields.py  pulse_gen.py  sellmeier.py  utils.py
